<resources>
    <string name="app_name">Android APP</string>
    <string name="etUserName_hint">User Name</string>
    <string name="password_hint">Password</string>
    <string name="btn_log_in_hint">Log In</string>
    <string name="btnclear_hint">Clear</string>
    <string name="btnRegister_msg">Register</string>
    <string name="btn_clear">Clear</string>
    <string name="btnBack">Back</string>

    <string name="btnNameHint">Name</string>
    <string name="etEmail">Email</string>
    <string name="etReenterPassword">Re-enter password</string>
    <string name="preferred_Time">Preffered Time</string>
    <string name="preferred_Time8">Only Working Hours</string>
    <string name="preferred_Time24">All Time</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="name">Name</string>
    <string name="only_working_hours">Only Working Hours</string>
    <string name="all_time">All Time</string>

    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>

    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="Back">Back</string>
    <string name="CE">CE</string>
    <string name="C">C</string>
    <string name="per">%</string>
    <string name="plusminus">+/-</string>
    <string name="dot">.</string>
    <string name="equal">=</string>

    <string name="btnPruductAdd">Add</string>

    <string-array name="country">
        <item>Turkey</item>
        <item>Russia</item>
        <item>Azerbayjan</item>
        <item>China</item>
        <item>Pakistan</item>
        <item>America</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    <string name="etPassword_hint">Password</string>-->


</resources>